# build_html

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: attributes.rs  container.rs  containers.rs  content.rs  elements.rs  html_container.rs  html_page.rs  lib.rs  metadata.rs  table.rs  tags.rs  tests.rs  text_content.rs
src/html_page/: constants.rs  header_content.rs  mod.rs  version.rs
